2012-07-22  Oleg Endo  <olegendo@gcc.gnu.org>

	PR target/33135
	* config/sh/sh.opt (mieee): Use Var instead of Mask.  Correct
	description.
	* config/sh/sh.c (sh_option_override): Do not change 
	flag_finite_math_only.  Set TARGET_IEEE to complement of
	flag_finite_math_only.
	* doc/invoke.texi (SH options): Add mno-ieee.  Correct
	description of mieee and mno-ieee behavior.

2012-07-16  Steven Bosscher  <steven@gcc.gnu.org>

	Backported from trunk:
	2012-07-13  Richard Sandiford  <rdsandiford@googlemail.com>
		    Steven Bosscher  <steven@gcc.gnu.org>
		    Bernd Schmidt  <bernds@codesourcery.com>

	PR rtl-optimization/53908
	* df-problems.c	(can_move_insns_across): When doing
	memory-reference book-keeping, handle call insns.

2012-07-06  Nick Clifton  <nickc@redhat.com>

	* config/mn10300/mn10300.c (mn10300_encode_section_info): Call
	default_encode_section_info.

2012-07-04  Richard Guenther  <rguenther@suse.de>

	PR middle-end/53433
	* tree-ssa-ccp.c (get_base_constructor): Do not return an
	error_mark_node DECL_INITIAL.

2012-07-02  Martin Jambor  <mjambor@suse.cz>

	PR middle-end/38474
	* ipa-prop.c (compute_known_type_jump_func): Check for a BINFO before
	checking for a dynamic type change.

2012-06-28  Richard Guenther  <rguenther@suse.de>

	PR middle-end/53790
	* expr.c (expand_expr_real_1): Verify if the type is complete
	before inspecting its size.

2012-06-22  Richard Guenther  <rguenther@suse.de>

	* gcov-iov.c: Include bconfig.h and system.h.

2012-06-22  Richard Guenther  <rguenther@suse.de>

	PR gcov-profile/53744
	* gcov-iov.c (main): Treat "" and "prerelease" the same.

2012-06-19  Joey Ye  <joey.ye@arm.com>

	Backported from mainline
	2011-10-14  David Alan Gilbert  <david.gilbert@linaro.org>

	* config/arm/arm.h (TARGET_HAVE_DMB_MCR): MCR Not available in Thumb1.

2012-06-18  Joey Ye  <joey.ye@arm.com>

	Backported from mainline
	2011-10-14  David Alan Gilbert  <david.gilbert@linaro.org>

	PR target/48126